--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.jpa.hibernate.ddl-auto=create
 spring.mvc.converters.preferred-json-mapper=gson
 spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.resolve-lazily=true
+server.tomcat.max-swallow-size=-1
