--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,9 +15,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=create
 
 # Application Configurations
-spring.threads.virtual.enabled=true
+spring.threads.virtual.enabled=false
 spring.mvc.converters.preferred-json-mapper=gson
 spring.servlet.multipart.max-file-size=1MB
-spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.max-request-size=2MB
 spring.servlet.multipart.resolve-lazily=true
 server.tomcat.max-swallow-size=-1
