--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 # Server Configuration
-server.port=5050
+server.port=5000
+server.name=Notix
+server.collaboration.port=5050
 
 #Security
 app.security.jwt.access_token.duration=900000
